Fixed Dropdown Z-Index Issue
Dropdown Menu has z-index 100 and will now be shown above all other UI
components

--- a/src/component-library/outputtailwind.css
+++ b/src/component-library/outputtailwind.css
@@ -595,6 +595,10 @@ video {
   z-index: 10;
 }
 
+.z-\[100\] {
+  z-index: 100;
+}
+
 .col-span-1 {
   grid-column: span 1 / span 1;
 }
